[tool.poetry]
name = "datascience"
version = "0.1.0"
description = ""
authors = ["Toshihiro Yamaguchi <toshihiro.engineer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.2"
pytorch-ignite = "^0.4.5"
qgrid = "^1.3.1"
bqplot = "^0.12.30"
earthengine-api = "^0.1.278"
transformers = "^4.13.0"
shapely = {version="^1.8.0", extras = ["vectorized"]}
pydub = "^0.25.1"
torchmetrics = "^0.5.1"
pytorch-lightning = "^1.5.5"
sympy = "^1.9"
flask = "^2.0.2"
pycryptodome = "^3.11.0"
easyocr = "^1.4.1"
ipympl = "^0.8.5"
onnx = "^1.11.0"
openpyxl = "^3.0.9"
timm = "^0.4.12"
torchinfo = "^1.5.3"
pytesseract = "^0.3.8"
wand = "^0.6.7"
pdf2image = "^1.16.0"
pypdf = "^3.12.2"
pyocr = "^0.8"
dask = "^2023.7"
setuptools = "59.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
